# dho-scrapy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  questions.md
.githooks/: pre-commit
.github/workflows/: pytest.yml
data/: messages.jsonl
data/embeddings/: embeddings_all-MiniLM-L12-v2.pkl  embeddings_all-MiniLM-L6-v2.pkl  embeddings_all-distilroberta-v1.pkl  embeddings_all-mpnet-base-v2.pkl  embeddings_distiluse-base-multilingual-cased-v1.pkl  embeddings_distiluse-base-multilingual-cased-v2.pkl  embeddings_multi-qa-MiniLM-L6-cos-v1.pkl  embeddings_multi-qa-distilbert-cos-v1.pkl  embeddings_multi-qa-mpnet-base-dot-v1.pkl  embeddings_paraphrase-MiniLM-L3-v2.pkl  embeddings_paraphrase-albert-small-v2.pkl  embeddings_paraphrase-multilingual-MiniLM-L12-v2.pkl  embeddings_paraphrase-multilingual-mpnet-base-v2.pkl  sent_embeddings_paraphrase-albert-small-v2.pkl
data_model/: forum_message.py  msg_category.py
data_models/: dho_message.py  embeddings_db.py  message_db.py  sentence.py  textsnippet.py
data_models/embedders/: embedder.py  embedder_mock.py  embedder_transformer.py
data_tools/: default_paths.py  dho_message.py  embeddings_db.py  message.py  message_db.py  textsnippet.py
data_tools/embedders/: embedder.py  embedder_mock.py  embedder_transformer.py
examples/: example_message_filtering.py
examples/tests/: test_example_message_filtering.py
experiments/: calc_embeddings.py  embeddings_pca.py  experiment_helper.py  experiment_setup.py  experiment_template.py
experiments/bjoern/: cache_all_embeddings.py  calc_all_embeddings.py  calc_embeddings.py  calc_msg_embeddings.py  calc_sent_embeddings.py  calc_sentence_embeddings.py  calc_sentences.py  exp_count_practice_logs.py  exp_message_pca.py  exp_message_sfa.py  exp_sentence_pca.py  (+11 more)
scraper/: 1_crawl_messages.py  2_convert_to_plain_text.py  pipelines.py  scrapy.cfg  settings.py
src/: 1_crawl_messages.py  2_calc_embeddings.py  2_convert_data.py  2_convert_to_plain_text.py  3_model_topics.py  crawl_messages.py  main.py  scrapy.cfg  settings.py
tests/: conftest.py
(+86 files in other folders)
