[tool.poetry]
name = "dho-scrapy"
version = "0.1.0"
description = ""
authors = ["Björn <bjoernwe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.7.1"
pydantic = "^1.10.4"
beautifulsoup4 = "^4.11.1"
typer = "^0.7.0"
sentence-transformers = "^2.2.2"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
