[tool.poetry]
name = "dho-scrapy"
version = "0.3.0"
description = ""
authors = ["Björn <bjoernwe@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"
pydantic = "^1.10.4"
beautifulsoup4 = "^4.11.1"
typer = "^0.7.0"
pre-commit = "^3.0.1"
nltk = "^3.8.1"
sklearn-sfa = "^0.1.6"
codenamize = "^1.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.experiments.dependencies]
sentence-transformers = "^2.2.2"
numpy = "^1.24.1"
tqdm = "^4.64.1"
plotly = "^5.13.0"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
